--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -105,17 +105,19 @@
 
 								<div class="row">
 									<div class="col-sm-12 col-md-12 col-lg-6">
-										<button type="button" class="btn btn-principal" [disabled]="!registerForm.valid"
+										<button type="button" class="btn btn-principal"
+											[disabled]="!registerForm.valid || authService.performingRegister === true"
 											(click)="handleSubmit()">Registrarme</button>
 									</div>
 
 									<div class="col-sm-12 col-md-12 col-lg-6">
-										<button type="button" class="btn btn-facebook">
+										<button type="button" class="btn btn-facebook"
+											[disabled]="authService.performingRegister === true">
 											<fa-icon [icon]="faFacebook"></fa-icon>Registrarme</button>
 									</div>
 
 
-									<div  style="color:#dc3545" *ngIf="authService.registerFailed.length > 0">
+									<div style="color:#dc3545" *ngIf="authService.registerFailed.length > 0">
 
 										{{ authService.registerFailed }}
 
