--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -43,6 +43,19 @@
 
 			</ul>
 
+			<div class="navbar-collapse justify-content-end">
+
+				<ul class="navbar-nav nav-pills" *ngIf="authService.isLoggedIn">
+
+					<li class="nav-item">
+						<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">{{ userName }}</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" [routerLink]="'.'" (click)="isCollapsed = true">Cerrar Sesión</a>
+					</li>
+				</ul>
+
+			</div>
 		</div>
 	</div>
 </nav>
