Manejo de origenes de modal

--- a/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
+++ b/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
@@ -1,7 +1,6 @@
 <div class="modal-header">
-	<h4 class="modal-title">Modal con Input</h4>
-	<button type="button" class="close" aria-label="Close" (click)="dismiss('Cerrar')">
-		<span aria-hidden="true">&times;</span>
+	<h4 class="modal-title">Crear Nuevo</h4>
+	<button type="button" class="btn-close" aria-label="Close" (click)="dismiss('Cerrar')">
 	</button>
 </div>
 <div class="modal-body">
