--- a/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.css
+++ b/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.css
@@ -6,3 +6,10 @@
 	border-color: #0B132B;
 	background-color: #0B132B;
 }
+
+.feedback {
+	margin-top:0.7em;
+	padding-left: 0.5em;
+	color: rgba(255, 0, 0, 0.63);
+	font-size: 0.8em;
+}
