--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.css
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.css
@@ -22,7 +22,7 @@ hr {
 	background-color: #0B132B;
 }
 
-.btn {
+.customBtn {
 	text-align: left;
 	font-size: 1rem;
 	width: 100%;
@@ -30,12 +30,24 @@ hr {
 	color: #0B132B;
 }
 
-.btn>fa-icon {
+.customBtn>fa-icon {
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }
 
-.btn:hover {
+.customBtn:hover {
+	background-color: #1C2541;
+	color: white;
+}
+
+.customDeleteBtn {
+	text-align: left;
+	font-size: 1rem;
+	background-color: #0B132B;
+	color: white;
+}
+
+.customDeleteBtn:hover {
 	background-color: #1C2541;
 	color: white;
 }
@@ -45,7 +57,7 @@ hr {
 	color: white;
 }
 
-.options>.btn {
+.options>.customBtn {
 	margin-bottom: 2rem;
 }
 
@@ -64,6 +76,7 @@ hr {
 .search>button {
 	font-size: 1rem;
 	width: 30%;
+	text-align: center;
 }
 
 .search>input {
