--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -24,12 +24,12 @@
 					[disabled]="isLoading === true">
 					<fa-icon [icon]="faFolderTree"></fa-icon>Solo Carpetas
 				</button>
-				<button [ngClass]="{'btn customBtn': true, 'marked':onlyProjects}" (click)="onlyProjects = !onlyProjects"
-					[disabled]="isLoading === true">
+				<button [ngClass]="{'btn customBtn': true, 'marked':onlyProjects}"
+					(click)="onlyProjects = !onlyProjects" [disabled]="isLoading === true">
 					<fa-icon [icon]="faCode"></fa-icon>Solo Proyectos
 				</button>
-				<button [ngClass]="{'btn customBtn': true, 'marked':onlySnippets}" (click)="onlySnippets = !onlySnippets"
-					[disabled]="isLoading === true">
+				<button [ngClass]="{'btn customBtn': true, 'marked':onlySnippets}"
+					(click)="onlySnippets = !onlySnippets" [disabled]="isLoading === true">
 					<fa-icon [icon]="faBarsStaggered"></fa-icon>Solo Snippets
 				</button>
 				<button [ngClass]="{'btn customBtn': true, 'marked':onlySharedProject}"
@@ -68,10 +68,10 @@
 							<th>Tipo</th>
 							<th>Creado</th>
 							<th>Modificado</th>
-							<th>Acciones</th>
+							<th class="text-center">Acciones</th>
 						</tr>
 					</thead>
-					<tbody  class="table-group-divider">
+					<tbody class="table-group-divider">
 
 						<tr *ngFor="let folder of rootFolder.folders">
 
@@ -79,7 +79,18 @@
 							<td>Carpeta</td>
 							<td>{{ folder.createdAt }}</td>
 							<td>{{ folder.modifiedAt ? folder.modifiedAt : 'ND' }}</td>
-							<td><button class="btn customDeleteBtn">Borrar</button></td>
+							<td class="text-center">
+
+								<button class="btn customDeleteBtn" *ngIf="triggerDeleteAction === false"
+									(click)="changeTriggerDeleteActionValue()">Borrar</button>
+
+								<div class="deleteActions" *ngIf="triggerDeleteAction === true">
+									<button class="btn btn-success"><fa-icon [icon]="faCheck"></fa-icon></button>
+									<button class="btn btn-danger" (click)="changeTriggerDeleteActionValue()"><fa-icon
+											[icon]="faXmark"></fa-icon></button>
+								</div>
+
+							</td>
 
 						</tr>
 
@@ -89,7 +100,18 @@
 							<td>Proyecto</td>
 							<td>{{ project.createdAt }}</td>
 							<td>{{ project.modifiedAt ? project.modifiedAt : 'ND' }}</td>
-							<td><button class="btn customDeleteBtn">Borrar</button></td>
+							<td class="text-center">
+
+								<button class="btn customDeleteBtn" *ngIf="triggerDeleteAction === false"
+									(click)="changeTriggerDeleteActionValue()">Borrar</button>
+
+								<div class="deleteActions" *ngIf="triggerDeleteAction === true">
+									<button class="btn btn-success"><fa-icon [icon]="faCheck"></fa-icon></button>
+									<button class="btn btn-danger" (click)="changeTriggerDeleteActionValue()"><fa-icon
+											[icon]="faXmark"></fa-icon></button>
+								</div>
+
+							</td>
 
 						</tr>
 
