--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -106,7 +106,8 @@
 									(click)="changeTriggerDeleteActionValue()">Borrar</button>
 
 								<div class="deleteActions" *ngIf="triggerDeleteAction === true">
-									<button class="btn btn-success"><fa-icon [icon]="faCheck"></fa-icon></button>
+									<button class="btn btn-success" (click)="deleteProject(project._id!)"><fa-icon
+											[icon]="faCheck"></fa-icon></button>
 									<button class="btn btn-danger" (click)="changeTriggerDeleteActionValue()"><fa-icon
 											[icon]="faXmark"></fa-icon></button>
 								</div>
