Items de navbar

--- a/src/app/codeverse/pages/project-explorer/project-explorer.component.html
+++ b/src/app/codeverse/pages/project-explorer/project-explorer.component.html
@@ -48,7 +48,7 @@
 				<h1>{{ rootFolder.name }}</h1>
 
 				<div class="search">
-					<input class="btn customBtn" type="search" placeholder="Search" aria-label="Search">
+					<input class="btn customBtn" type="search" placeholder="Buscar" aria-label="Search">
 					<button class="btn customBtn">Buscar</button>
 				</div>
 
