prueba de highlight

--- a/src/app/codeverse/components/editor/editor.component.html
+++ b/src/app/codeverse/components/editor/editor.component.html
@@ -9,7 +9,11 @@
 	</div>
 
 	<div class="editor">
-		<textarea [(ngModel)]="code" (ngModelChange)="textareaValueChange()"></textarea>
+		<pre>
+			<code [highlight]="code" [languages]="['javascript', 'css', 'xml']">
+				<textarea [(ngModel)]="code" (ngModelChange)="textareaValueChange()"></textarea>
+			</code>
+		</pre>
 	</div>
 
 </div>
