--- a/src/app/codeverse/components/editor/editor.component.css
+++ b/src/app/codeverse/components/editor/editor.component.css
@@ -23,8 +23,8 @@
 }
 
 .editor {
-	background-color: #3A506B;
-	color: white;
+	/* background-color: #3A506B; */
+	/* color: white; */
 	padding: 0.5rem;
 	height: 100%;
 }
@@ -40,7 +40,6 @@
 	border-style: solid;
 	border-color: #3A506B;
 	border-radius: 15px 15px 0px 0px;
-
 	text-align: left;
 	font-size: 1rem;
 	color: white;
@@ -66,7 +65,7 @@ textarea {
 	width: 100%;
 	height: 100%;
 	resize: none;
-	background-color: #3A506B;
-	color: white;
+	/* background-color: #3A506B; */
+	/* color: white; */
 	border: 1px #3A506B;
 }
